re PR rtl-optimization/56023 ([alpha] -fcompare-debug failure due to sched1 pass)

PR rtl-optimization/56023
	* haifa-sched.c (fix_inter_tick): Do not update ticks of instructions,
	dependent on debug instruction.

testsuite/ChangeLog:

	PR rtl-optimization/56023
	* gcc.dg/pr56023.c: New test.

From-SVN: r195344